--- a/.github/workflows/bitsnake.yml
+++ b/.github/workflows/bitsnake.yml
@@ -1,1 +1,23 @@
-.
+name: Update Snake Animation
+on:
+  schedule:
+    - cron: "0 0 * * *" # Executar uma vez por dia à meia-noite
+  workflow_dispatch:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verify the repository
+        uses: actions/checkout@v3
+      - uses: Platane/snk@master
+        id: snake-gif
+        with:
+          github_user_name: Hacker-Bug-Hunter
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
