--- a/.github/workflows/bitsnake.yml
+++ b/.github/workflows/bitsnake.yml
@@ -11,7 +11,7 @@ on:
   # run on every push on the master branch
   push:
     branches:
-    - master
+    - output
     
   
 
@@ -27,8 +27,8 @@ jobs:
         with:
           github_user_name: Hacker-Bug-Hunter
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            github-contribution-grid-snake.svg
+            github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
