--- a/.github/workflows/bitsnake.yml
+++ b/.github/workflows/bitsnake.yml
@@ -1,44 +1,23 @@
-name: generate animation
+name: Generate Snake Animation
+uses: Platane/snk@v3
+with:
+    # Nome de usuário do GitHub para ler o gráfico de contribuição (**obrigatório**)
+    # usando a variável de contexto de ação `github.repository_owner` ou o usuário especificado
+    github_user_name: ${{ github.repository_owner }}
 
-on:
-  # run automatically every 00:00 hours
-  schedule:
-    - cron: "0 0 * * *" 
-  
-  # allows to manually run the job at any time
-  workflow_dispatch:
-  
-  # run on every push on the master branch
-  push:
-    branches:
-    - master
-    
-  
-
-jobs:
-  generate:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    
-    steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk@v3
-        with:
-          github_user_name: Hacker-Bug-Hunter
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-          
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # Lista de arquivos a serem gerados.
+    # Um arquivo por linha. Cada saída pode ser personalizada com opções como uma string de consulta.
+    #
+    # Opções suportadas:
+    # - palette:     Um conjunto de cores, uma das [github, github-dark, github-light]
+    # - color_snake: Cor da cobra
+    # - color_dots:  Lista separada por vírgulas de cores dos pontos.
+    #                 O primeiro é 0 contribuição, depois vai das contribuições baixas para as mais altas.
+    #                 Exatamente 5 cores são esperadas.
+    outputs: |
+      dist/github-snake.svg
+      dist/github-snake-dark.svg?palette=github-dark
+      dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+env:
+  # É necessário um token do GitHub para buscar o calendário de contribuições na API do GitHub
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
