--- a/.github/workflows/bitsnake.yml
+++ b/.github/workflows/bitsnake.yml
@@ -1,23 +1,43 @@
-name: Generate Snake Animation
-uses: Platane/snk@v3
-with:
-    # Nome de usuário do GitHub para ler o gráfico de contribuição (**obrigatório**)
-    # usando a variável de contexto de ação `github.repository_owner` ou o usuário especificado
-    github_user_name: ${{ github.repository_owner }}
+name: Generate Animation
 
-    # Lista de arquivos a serem gerados.
-    # Um arquivo por linha. Cada saída pode ser personalizada com opções como uma string de consulta.
-    #
-    # Opções suportadas:
-    # - palette:     Um conjunto de cores, uma das [github, github-dark, github-light]
-    # - color_snake: Cor da cobra
-    # - color_dots:  Lista separada por vírgulas de cores dos pontos.
-    #                 O primeiro é 0 contribuição, depois vai das contribuições baixas para as mais altas.
-    #                 Exatamente 5 cores são esperadas.
-    outputs: |
-      dist/github-snake.svg
-      dist/github-snake-dark.svg?palette=github-dark
-      dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-env:
-  # É necessário um token do GitHub para buscar o calendário de contribuições na API do GitHub
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+on:
+  # Executa automaticamente todos os dias à meia-noite
+  schedule:
+    - cron: "0 0 * * *"
+
+  # Permite executar manualmente o trabalho a qualquer momento
+  workflow_dispatch:
+
+  # Executa a cada push na branch master
+  push:
+    branches:
+      - master
+
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      # Gera um jogo da cobrinha a partir do gráfico de contribuição do usuário do GitHub (<github_user_name>),
+      # produzindo uma animação SVG em <svg_out_path>
+      - name: Generate GitHub Contribution Grid Snake SVG
+        uses: Platane/snk@v3
+        with:
+          github_user_name: Hacker-Bug-Hunter
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Envia o conteúdo de <build_dir> para um branch
+      # O conteúdo estará disponível em https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>,
+      # ou como página do GitHub
+      - name: Push GitHub Contribution Grid Snake SVG to the Output Branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
