--- a/.github/workflows/never.yml
+++ b/.github/workflows/never.yml
@@ -1,1 +1,32 @@
-#
+name: Create and Delete File
+
+on:
+  schedule:
+    - cron: "1 0 * * *"
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
+jobs:
+  createAndDeleteFile:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Go to the Hacker-Bug-Hunter/
+      run: cd ../..
+      
+    - name: Create Empty File
+      run: touch .py
+
+    - name: List Files
+      run: ls
+
+    - name: Delete File
+      run: rm .py
+
+    - name: List Files After Deletion
+      run: ls
