--- a/.github/workflows/never.yml
+++ b/.github/workflows/never.yml
@@ -13,6 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Use Node.js 16
+      uses: actions/setup-node@v4
+      with:
+        node-version: 16
+
     - name: Checkout Repository
       uses: actions/checkout@v2
 
