--- a/.github/workflows/never.yml
+++ b/.github/workflows/never.yml
@@ -27,6 +27,9 @@ jobs:
     - name: List Files
       run: ls
 
+    - name: Wait for 30 seconds
+      run: sleep 30
+
     - name: Delete File
       run: rm .py
 
