--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -1,4 +1,4 @@
-name: Update README
+name: Compare SVGs and Update README
 
 on:
   push:
@@ -16,7 +16,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: 3.10  # Use 3.x para indicar a última versão disponível
+        architecture: x64
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Run Python script
       run: python compare_and_update.py
