--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -1,9 +1,9 @@
 name: Compare SVGs and Update README
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "3 0 * * *"
+  workflow_dispatch:
 
 jobs:
   compare_and_update:
