--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.6
+        architecture: x64
 
     - name: Install dependencies
       run: |
