--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r .github/workflows/streak/requirements.txt
 
     - name: Run Python script
       run: python compare_and_update.py
