--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,3 @@
-
 name: Generate Animation
 
 on:
@@ -19,20 +18,10 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: List files in dist before push
-        run: ls -R dist
-      - name: Add and commit new files
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add dist/*
-          git commit -m "snake"
-      - name: List files in dist after push
-        run: ls -R dist
-      - name: Push GitHub Contribution Grid Snake SVG to the Output Branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          target_branch: output
-          build_dir: dist
+          target_branch: gh-pages
+          build_dir: my_directory
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
