--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
-          target_branch: gh-pages
+          target_branch: output
           build_dir: my_directory
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
