--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,6 +18,10 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: ls
+        run: ls -a
+      - name: pwd
+        run: pwd
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
