--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,14 +18,12 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: ls
-        run: ls -a
-      - name: pwd
-        run: pwd
+      - name: linnux
+        run: ls -a; ls -a dist; pwd
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
-          build_dir: my_directory
+          build_dir: snake
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
