--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,6 +24,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
-          build_dir: snake
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
