--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,11 +19,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: linnux
-        run: ls -a; ls -a dist; pwd
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ls -a; echo; ls -a dist; echo; pwd
+      - name: Move SVG files to custom directory
+        run: |
+          mkdir meu_diretorio
+          mv dist/* meu_diretorio/
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.email "72585285+visnowden@users.noreply.github.com"
+          git config --global user.name "visnowden"
+          git add snake/
+          git commit -m "update snakes's SVG files to snake"
+          git push origin output
