--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Commit and push changes
         run: |
+          git init snake/
           git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git config --global user.name "visnowden"
           git add snake/
