--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,14 +22,15 @@ jobs:
         run: ls -a; echo; ls -a dist; echo; pwd
       - name: Move SVG files to custom directory
         run: |
-          mkdir snake/
-          cp dist/* snake/
+          mkdir snake
+          cp dist/* snake
 
       - name: Commit and push changes
         run: |
-          git init snake/
+          cd snake
+          git init
           git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git config --global user.name "visnowden"
-          git add snake/
+          git add snake
           git commit -m "update snakes's SVG files to snake"
           git push origin output
