--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -33,5 +33,6 @@ jobs:
           git config --global user.name "visnowden"
           git add .
           git commit -m "update snakes's SVG files to snake"
+          git checkout -b output origin/output
           git remote add origin https://github.com/visnowden/visnowden/snake.git
           git push origin output
