--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -34,5 +34,5 @@ jobs:
           git add .
           git commit -m "update snakes's SVG files to snake"
           git checkout -b output origin/output
-          git remote add origin https://github.com/visnowden/visnowden/snake.git
+          git remote add origin https://github.com/visnowden/visnowden.git
           git push origin output
