--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: linnux
-        run: ls -a; echo; ls -a dist; echo; pwd
+        run: pwd; echo; ls -a; echo; ls -a dist;
       - name: Move SVG files to custom directory
         run: |
           mkdir snake
@@ -28,6 +28,7 @@ jobs:
       - name: Commit and push changes
         run: |
           cd snake
+          git init
           git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git config --global user.name "visnowden"
           git checkout output
