--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,19 +20,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: linnux
         run: pwd; echo; ls -a; echo; ls -a dist;
-      - name: Move SVG files to custom directory
+      - name: Move SVG files to custom directory nad Commit and push changes
         run: |
           mkdir snake
-          cp dist/* snake
-
-      - name: Commit and push changes
-        run: |
           cd snake
           git init
+          git switch -c output
+          cp ../dist/* snake
+          cp ../dist/* .
           git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git config --global user.name "visnowden"
-          git checkout output
           git add .
           git commit -m "Update snakes's SVG files to output"
           git push origin output
-
