--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,19 +18,17 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: linnux
+      - name: linux
         run: pwd; echo; ls -a; echo; ls -a dist;
       - name: Move SVG files to custom directory nad Commit and push changes
         run: |
-          mkdir snake
-          cd snake
-          git init
-          git switch output
-          git config --global init.defaultBranch output
-          cp ../dist/* .
-          git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git config --global user.name "visnowden"
-          git add .
+          git config --global user.email "72585285+visnowden@users.noreply.github.com"
+          git init
+          mkdir snake
+          git checkout -b output
+          cp dist/* snake
+          git add snake
           git commit -m "Update snakes's SVG files to output"
-          git remote add origin "https://github.com/visnowden/visnowden.git"
+          git remote add origin https://github.com/visnowden/visnowden.git
           git push origin output
