--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -32,3 +32,5 @@ jobs:
           git commit -m "Update snakes's SVG files to output"
           git remote add origin https://github.com/visnowden/visnowden.git
           git push origin output
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
