--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,9 +22,12 @@ jobs:
         run: pwd; echo; ls -a; echo; ls -a dist;
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
+          git credential-cache exit
+          rm -f ~/.git-credentials
           git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git config --global user.name "visnowden"
           git clone https://github.com/visnowden/visnowden
+          git remote set-url origin https://github.com/visnowden/visnowden.git
           echo
           pwd
           echo
