--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,15 +16,13 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: linux
         run: pwd; echo; ls -a; echo; ls -a dist;
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
           git credential-cache exit
           rm -f ~/.git-credentials
-          git config --global user.email "72585285+visnowden@users.noreply.github.com"
+          git config --global user.token snake
           git config --global user.name "visnowden"
           git clone https://github.com/visnowden/visnowden
           echo
@@ -53,3 +51,5 @@ jobs:
           echo
           git commit -m "Update snakes's SVG files to output"
           git push -u origin output
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
