--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -20,9 +20,10 @@ jobs:
         run: pwd; echo; ls -a; echo; ls -a dist;
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
+          pwd
           git config user.name "visnowden"
+          pwd
           git clone https://visnowden:${{ secrets.snake }}@github.com/visnowden/visnowden
-          echo
           pwd
           echo
           ls -la
