--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           pwd
           git clone https://visnowden:${{ secrets.snake }}@github.com/visnowden/visnowden
-          git config user.name "visnowden"
-          git config user.email "72585285+visnowden@users.noreply.github.com"
+          git config --global user.name "visnowden"
+          git config --global user.email "72585285+visnowden@users.noreply.github.com"
           pwd
           pwd
           echo
