--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,15 +22,15 @@ jobs:
         run: |
           pwd
           git clone https://visnowden:${{ secrets.snake }}@github.com/visnowden/visnowden
-          git config --global user.name "visnowden"
-          git config --global user.email "72585285+visnowden@users.noreply.github.com"
+          git config user.name "visnowden"
+          git config user.email "72585285+visnowden@users.noreply.github.com"
           pwd
           pwd
           echo
           ls -la
           echo
           cd visnowden
-          git remote set-url origin https://github.com/visnowden/visnowden.git
+          git remote set-url origin https://visnowden:${{ secrets.snake }}@github.com/visnowden/visnowden.git
           echo
           ls -la
           echo
