--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -21,15 +21,14 @@ jobs:
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
           pwd
-          git clone https://visnowden:${{ secrets.snake }}@github.com/visnowden/visnowden
-          git config user.name "visnowden"
-          git config user.email "72585285+visnowden@users.noreply.github.com"
-          pwd
+          git clone https://github.com/visnowden/visnowden
           pwd
           echo
           ls -la
           echo
           cd visnowden
+          git config --global user.name "visnowden"
+          git config --global user.email "72585285+visnowden@users.noreply.github.com"
           git remote set-url origin https://visnowden:${{ secrets.snake }}@github.com/visnowden/visnowden.git
           echo
           ls -la
