--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -41,6 +41,7 @@ jobs:
           mkdir snake
           cp ../dist/* snake
           git switch -c output
+          git fetch
           echo
           cat .git/config
           echo
