--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -60,4 +60,4 @@ jobs:
           git commit -m "Update snakes's SVG files to output"
           git push origin output
         env:
-          AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          AUTH_TOKEN: ${{ secrets.snake }}  
