--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -47,6 +47,6 @@ jobs:
           git add snake
           echo
           git commit -m "Update snakes's SVG files to output"
-          git push origin output
+          git push -u origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}  
