--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -48,6 +48,6 @@ jobs:
           git add snake/
           echo
           git commit -m "Update snakes's SVG files to output"
-          git push -u origin origin/output
+          git push -u origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}  
