--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
-          git switch output
+          git switch -c output
           git pull
           git add snake/
           git commit -m "Update snakes's SVG files to output"
