--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,10 +26,12 @@ jobs:
 
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
+          echo \nls -la
+          ls -la
           git switch -c output
           git pull
           git add snake/
           git commit -m "Update snakes's SVG files to output"
-          git push -u origin output
+          git push -u origin origin/output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}  
