--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: "2 0 * * *"
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +32,6 @@ jobs:
           ls -la
           git add snake/
           git commit -m "Update snakes's SVG files to output"
-          git push -u origin origin/output
+          git push -u origin output
         env:
-          AUTH_TOKEN: ${{ secrets.snake }}  
+          AUTH_TOKEN: ${{ secrets.snake }}
