--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -32,6 +32,7 @@ jobs:
           ls -la
           git add snake/
           git commit -m "Update snakes's SVG files to output"
+          git fetch
           git push -u origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}
