--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,12 +1,12 @@
-name: Generate Animation
+name: Generate SVGs
 
 on:
-  schedule:
+ schedule:
     - cron: "2 0 * * *"
-  workflow_dispatch:
+ workflow_dispatch:
 
 jobs:
-  build:
+ build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
