--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,6 +26,6 @@ jobs:
           git config user.name "visnowden"
           git config user.email "72585285+visnowden@users.noreply.github.com"
           git add snake/
-          git push -u origin output -f
+          git push -u origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}
