--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
-          git checkout -b output
+          git switch output
           git config user.name "visnowden"
           git config user.email "72585285+visnowden@users.noreply.github.com"
           git fetch
