--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,6 +28,7 @@ jobs:
           git fetch
           git pull
           git add snake/
+          git commit
           git push origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}
