--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,13 +22,13 @@ jobs:
 
       - name: Move SVG files to custom directory and Commit and push changes
         run: |
-          git switch output
+          git switch -c output
           git config user.name "visnowden"
           git config user.email "72585285+visnowden@users.noreply.github.com"
           git fetch
           git pull
           git add snake/
           git commit
-          git push origin output -f
+          git push origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}
