--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,7 +26,7 @@ jobs:
           git config user.name "visnowden"
           git config user.email "72585285+visnowden@users.noreply.github.com"
           git add snake/
-          git commit
+          git commit -m "commit"
           git push origin output
         env:
           AUTH_TOKEN: ${{ secrets.snake }}
