--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,7 +22,17 @@ jobs:
             snk/snake/github-contribution-grid-snake.svg
             snk/snake/github-contribution-grid-snake-dark.svg?palette=github-dark
           
-          
+      - name: linux
+        run: |
+          echo ls -la
+          ls -la
+          echo
+          echo git switch
+          git switch output
+          echo
+          echo ls -la
+          ls -la
+          echo
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
