--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,6 +13,8 @@ jobs:
     timeout-minutes: 5
     
     steps:
+      - uses: actions/checkout@v3
+
       # generates a snake game from a github user (visnowden) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
