--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,6 +14,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: output
 
       # generates a snake game from a github user (visnowden) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
