--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,10 +10,10 @@ jobs:
     permissions: 
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 1
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: raw
 
@@ -23,8 +23,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            snk/gh_snk.svg
             snk/gh_snk_dark.svg?palette=github-dark
+            snk/gh_snk.svg
           
       - name: linux
         run: |
@@ -36,6 +36,9 @@ jobs:
       - name: push gh_snk.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
+          committer: 72585285+visnowden@users.noreply.github.com
+          author: 72585285+visnowden@users.noreply.github.com
+          commit_message: snake update
           target_branch: raw
           build_dir: .
         env:
