--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -42,4 +42,4 @@ jobs:
           target_branch: raw
           build_dir: .
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.snake }}
