--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -39,3 +39,5 @@ jobs:
           commit_message: snake update
           target_branch: raw
           build_dir: .
+        env:
+          GITHUB_TOKEN: ${{ github.GITHUB_TOKEN }}
