--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -40,4 +40,4 @@ jobs:
           target_branch: raw
           build_dir: .
         env:
-          GITHUB_TOKEN: ${{ github.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ GITHUB_TOKEN }}
