--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate SVGs
+tname: Generate SVGs
 
 on:
   schedule:
@@ -40,4 +40,4 @@ jobs:
           target_branch: raw
           build_dir: .
         env:
-          GITHUB_TOKEN: ${{ GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
