--- a/.github/workflows/👀.yml
+++ b/.github/workflows/👀.yml
@@ -19,5 +19,10 @@ jobs:
         python-version: 3.8
         architecture: x64
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r .github/workflows/streak/👀.txt
+
     - name: Run Python script
       run: python .github/workflows/👀
