--- a/.github/workflows/👀.yml
+++ b/.github/workflows/👀.yml
@@ -25,4 +25,4 @@ jobs:
         pip install -r .github/workflows/streak/👀.txt
 
     - name: Run Python script
-      run: python .github/workflows/👀
+      run: python .github/workflows/👀.py
