--- a/.github/workflows/👀.yml
+++ b/.github/workflows/👀.yml
@@ -21,6 +21,8 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pwd
+        ls -la
         python -m pip install --upgrade pip
         pip install -r .github/workflows/streak/👀.txt
 
